using the admin dash for new requests

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,5 @@
-# Twilio Configuration
-# Get these from https://console.twilio.com/
+# No environment variables required for basic setup!
+# The admin dashboard works out of the box.
 
-# Your Twilio Account SID (found on the Twilio Console Dashboard)
-TWILIO_ACCOUNT_SID=ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-
-# Your Twilio Auth Token (found on the Twilio Console Dashboard)
-TWILIO_AUTH_TOKEN=your_auth_token_here
-
-# Your Twilio Phone Number (format: +1XXXXXXXXXX)
-# This is the phone number you purchased from Twilio
-TWILIO_PHONE_NUMBER=+1234567890
-
-# The phone number to receive SMS notifications (format: +1XXXXXXXXXX)
-# This is where estimate requests will be sent
-RECIPIENT_PHONE_NUMBER=+16469886601
+# Optional: Add your own environment variables here if needed
+# NODE_ENV=production
